
// === Removed Features and Support

// === Removed Dissectors

// === New File Format Decoding Support

// [commaize]
// --
// --

=== New Protocol Support

// Add one protocol per line between the -- delimiters in the format
// "Full protocol name (Abbreviation)"
[commaize]
--
Bluetooth Link Manager Protocol (BT LMP)
Event Tracing for Windows (ETW)
Kerberos SPAKE
Linux psample protocol
Local Interconnect Network (LIN)
Microsoft Task Scheduler Service
O-RAN fronthaul UC-plane (O-RAN)
Opus Interactive Audio Codec (OPUS)
PDU Transport Protocol
Real-Time Publish-Subscribe Wire Protocol (processed) (RTPS-PROC)
Real-Time Publish-Subscribe Virtual Transport (RTPS-VT)
Shared Memory Communications (SMC)
Signal PDU
SparkplugB
State Synchronization Protocol (SSyncP)
Tagged Image File Format (TIFF)
TP-Link Smart Home Protocol
R09.x (R09)
O-RAN E2AP
--

=== Updated Protocol Support

Too many protocols have been updated to list here.

=== New and Updated Capture File Support

// There is no new or updated capture file support in this release.
// Add one file type per line between the -- delimiters.
[commaize]
--
BLF support
--

// === New and Updated Capture Interfaces support

//_Non-empty section placeholder._

// === Major API Changes

== Getting Wireshark

Wireshark source code and installation packages are available from
https://www.wireshark.org/download.html.

=== Vendor-supplied Packages

Most Linux and Unix vendors supply their own Wireshark packages.
You can usually install or upgrade Wireshark using the package management system specific to that platform.
A list of third-party packages can be found on the
https://www.wireshark.org/download.html#thirdparty[download page]
on the Wireshark web site.

== File Locations

Wireshark and TShark look in several different locations for preference files, plugins, SNMP MIBS, and RADIUS dictionaries.
These locations vary from platform to platform.
You can use About → Folders to find the default locations on your system.
