@@ -108,6 +108,7 @@ The following features are new (or have been significantly updated) since versio
 --
 Bluetooth Link Manager Protocol (BT LMP)
 Event Tracing for Windows (ETW)
+High-Performance Connectivity Tracer (HiPerConTracer)
 Kerberos SPAKE
 Linux psample protocol
 Local Interconnect Network (LIN)
